--- a/css/styles.css
+++ b/css/styles.css
@@ -1,68 +1,3 @@
-:root {
-  --main-font-size: 14px;
-  --secondary-font-size: 16px;
-  --text-primary-color: #212121;
-  --text-secondary-color: #757575;
-  --text-accent-color: #2196f3;
-  --mainbackground: #ffffff;
-  --second-background-color: #2f303a;
-  --third-background-color: #f5f4fa;
-  --background-accent: #188ce8;
-  --background-icon: #afb1b8;
-}
-/* utilities and resets */
-body {
-  padding: 0;
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
-  letter-spacing: 0.03em;
-  color: var(--text-primary-color);
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-ul,
-p {
-  padding: 0;
-  margin: 0;
-}
-img {
-  display: block;
-}
-.container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.flex {
-  display: flex;
-}
-.link {
-  text-decoration: none;
-}
-.list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
 /* webstudio nav*/
 .header {
   border-bottom: 1px solid #ececec;
@@ -74,7 +9,7 @@ img {
 .nav-logo {
   display: block;
   margin-right: 93px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.173;
@@ -118,7 +53,7 @@ img {
   color: var(--text-accent-color);
 }
 .current::after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   left: 0;
@@ -145,8 +80,12 @@ img {
 }
 .hero-section {
   background: var(--second-background-color);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url('../images/hero_background.jpg');
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/hero_background.jpg");
 
   background-repeat: no-repeat;
   background-position-x: center;
@@ -174,7 +113,7 @@ img {
   border: 0;
   border-radius: 4px;
   padding: 10px 32px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: var(--secondary-font-size);
   line-height: 1.875;
@@ -250,7 +189,7 @@ img {
   background: rgba(47, 48, 58, 0.8);
 }
 .overlay-item {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: 700;
   font-size: 14px;
   line-height: 1.142;
@@ -334,7 +273,8 @@ img {
   color: var(--background-icon);
   border: 1px solid var(--background-icon);
   border-radius: 4px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customer-links:hover,
 .customer-links:focus {
@@ -361,14 +301,15 @@ img {
   border: 0;
   border-radius: 4px;
   padding: 6px 22px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: var(--secondary-font-size);
   line-height: 1.62;
   cursor: pointer;
   background: var(--third-background-color);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn:hover,
 .btn:focus {
@@ -413,7 +354,7 @@ img {
   width: 100%;
   height: 294px;
   padding: 63px 24px;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
@@ -498,7 +439,7 @@ img {
 
 .modal-header {
   margin-bottom: 30px;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
@@ -513,7 +454,7 @@ img {
 .modal-label {
   position: absolute;
   top: -18px;
-  font-family: 'Roboto';
+  font-family: "Roboto";
 
   font-size: 12px;
   line-height: 1.1666;
@@ -571,7 +512,7 @@ img {
 }
 .license-text {
   margin-left: 15px;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-size: 14px;
   line-height: 1.71;
   color: var(--text-secondary-color);
@@ -602,16 +543,15 @@ img {
   position: absolute;
   left: 9px;
   pointer-events: none;
-
 }
-.modal-check:checked + .checkbox-svg{
-  background-image: url('../images/icon-check.svg');
+.modal-check:checked + .checkbox-svg {
+  background-image: url("../images/icon-check.svg");
   background-origin: border-box;
   background-size: contain;
   pointer-events: none;
   fill: var(--background-accent);
 }
-.modal-send{
+.modal-send {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
