новая структура цсс

--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -52,12 +52,10 @@
 .socials-footer .team-social-link:focus {
   background: var(--background-accent);
 }
-.footer-line {
+.footer-baseline {
   align-items: baseline;
 }
-.sign {
-  background-color: var(--background-accent);
-}
+
 .sign-form {
   margin-left: 93px;
 }
