--- a/sass/utils/_utility.scss
+++ b/sass/utils/_utility.scss
@@ -6,7 +6,13 @@ body {
   letter-spacing: 0.03em;
   color: var(--text-primary-color);
 }
-
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.fix-padding-bottom {
+  padding-bottom: 0;
+}
 h1,
 h2,
 h3,
@@ -18,11 +24,9 @@ p {
   padding: 0;
   margin: 0;
 }
-
 img {
   display: block;
 }
-
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -30,23 +34,17 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
-
 .flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .link {
   text-decoration: none;
 }
-
 .list {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -54,10 +52,15 @@ img {
   margin: -1px;
   border: 0;
   padding: 0;
+
   white-space: nowrap;
-  -webkit-clip-path: inset(100%);
-          clip-path: inset(100%);
+  clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-/*# sourceMappingURL=main.css.map */
+.section-heading {
+  margin-bottom: 50px;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+}
