--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,5 +13,5 @@
 @import "components/filter-btns";
 @import "components/portfolio-works-section";
 @import "components/modal-window";
-@import "components/order-form";
+@import "components/feedback-form";
 @import "components/page-footer";
