--- a/css/feedback-form.css
+++ b/css/feedback-form.css
@@ -1,57 +1,59 @@
-.modal-header {
-  margin-bottom: 30px;
-  font-family: "Roboto";
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-}
 .label-container {
   position: relative;
 }
+
 .label-container + .label-container {
   margin-top: 28px;
 }
+
 .modal-label {
   position: absolute;
   top: -18px;
   font-family: "Roboto";
-
   font-size: 12px;
   line-height: 1.1666;
   letter-spacing: 0.01em;
   color: #757575;
 }
+
 .modal-input {
   width: 448px;
   height: 40px;
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   border-radius: 4px;
+  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .area-comments {
   width: 448px;
   height: 120px;
   padding: 12px 16px 12px 16px;
   resize: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   border-radius: 4px;
+  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .area-comments:focus,
 .area-comments:hover {
   cursor: pointer;
   outline: none;
   border: 1px solid var(--background-accent);
 }
+
 .form-svg {
   position: absolute;
   top: 50%;
   left: 12px;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 
 .modal-input:focus,
@@ -60,17 +62,24 @@
   outline: none;
   border: 1px solid var(--background-accent);
 }
+
 .modal-input:focus ~ .form-svg,
 .modal-input:hover ~ .form-svg {
   cursor: pointer;
   fill: var(--background-accent);
 }
+
 .license-container {
   position: relative;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-top: 20px;
 }
+
 .license-text {
   margin-left: 15px;
   font-family: "Roboto";
@@ -78,6 +87,7 @@
   line-height: 1.71;
   color: var(--text-secondary-color);
 }
+
 .license-link {
   -webkit-text-decoration: underline;
   text-decoration: underline;
@@ -85,6 +95,7 @@
   text-underline-position: under;
   color: var(--background-accent);
 }
+
 .modal-check {
   /* -webkit-appearance: none;
   -moz-appearance: none;
@@ -94,17 +105,19 @@
   margin: -1px;
   border: 0;
   padding: 0;
-
   white-space: nowrap;
-  clip-path: inset(100%);
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
 .checkbox-svg {
   position: absolute;
   left: 9px;
   pointer-events: none;
 }
+
 .modal-check:checked + .checkbox-svg {
   background-image: url("../images/icon-check.svg");
   background-origin: border-box;
@@ -112,10 +125,13 @@
   pointer-events: none;
   fill: var(--background-accent);
 }
+
 .modal-send {
   position: absolute;
   left: 50%;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
   margin-top: 30px;
   padding: 10px 55px 10px 56px;
 }
+/*# sourceMappingURL=feedback-form.css.map */
