--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ img {
   text-decoration: none;
 }
 
-.list {
+.list, .main-navigation, .contacts-navigation, .advantages, .works, .team-list, .socials-list, .regular-customers {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -115,6 +115,9 @@ img {
 }
 
 .navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -132,6 +135,12 @@ img {
   background-color: var(--background-accent);
 }
 
+.main-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .main-navigation .nav-link.current {
   color: var(--text-accent-color);
 }
@@ -141,6 +150,9 @@ img {
 }
 
 .contacts-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   margin-left: auto;
 }
 
@@ -198,7 +210,7 @@ img {
   padding-bottom: 200px;
 }
 
-.hero-heading {
+.hero-section__heading {
   max-width: 696px;
   margin-left: auto;
   margin-right: auto;
@@ -234,26 +246,26 @@ img {
 }
 
 /* advantages */
-.advantages-text {
-  font-size: var(--main-font-size);
-  line-height: 1.71;
-  color: var(--text-secondary-color);
+.advantages {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-.advantages .item {
+.advantages__item {
   width: 270px;
 }
 
-.advantages .item + .item {
+.advantages__item:not(:first-child) {
   margin-left: 30px;
 }
 
-.advantages-icon {
+.advantages__icon {
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.advantages-icon-bg {
+.advantages__icon-bg {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -269,16 +281,35 @@ img {
   background-color: var(--third-background-color);
 }
 
+.advantages__heading {
+  margin-bottom: 10px;
+  font-size: var(--main-font-size);
+  line-height: 1.1;
+  text-transform: uppercase;
+}
+
+.advantages__text {
+  font-size: var(--main-font-size);
+  line-height: 1.71;
+  color: var(--text-secondary-color);
+}
+
 /* what we do */
-.working .item {
+.works {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.works__card {
   position: relative;
 }
 
-.working .item + .item {
+.works__card:not(:first-child) {
   margin-left: 30px;
 }
 
-.working-overlay {
+.works__overlay {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -295,7 +326,7 @@ img {
   background: rgba(47, 48, 58, 0.8);
 }
 
-.overlay-item {
+.works__overlay-item {
   font-family: "Roboto";
   font-weight: 700;
   font-size: 14px;
@@ -310,7 +341,21 @@ img {
   background: var(--third-background-color);
 }
 
-.team-heading {
+.team-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.team-member-card {
+  width: 270px;
+}
+
+.team-member-card:not(:first-child) {
+  margin-left: 30px;
+}
+
+.team-list__member-name {
   margin-bottom: 10px;
   font-weight: 500;
   font-size: var(--secondary-font-size);
@@ -318,7 +363,7 @@ img {
   text-align: center;
 }
 
-.team-text {
+.team-member-card__occupation {
   margin-bottom: 16px;
   font-size: var(--secondary-font-size);
   line-height: 1.172;
@@ -326,15 +371,7 @@ img {
   color: var(--text-secondary-color);
 }
 
-.team-list .item {
-  width: 270px;
-}
-
-.team-list .item + .item {
-  margin-left: 30px;
-}
-
-.card-text {
+.team-member-card__text {
   padding-top: 30px;
   padding-bottom: 30px;
   border-radius: 0px 0px 4px 4px;
@@ -343,7 +380,7 @@ img {
   background: var(--mainbackground);
 }
 
-.team-social {
+.socials-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -355,7 +392,7 @@ img {
           justify-content: center;
 }
 
-.team-social-link {
+.socials-list__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -373,27 +410,33 @@ img {
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-social-icon {
+.socials-list__icon {
   fill: currentColor;
 }
 
-.team-social .item-social + .item-social {
+.socials-list__item:not(:first-child) {
   margin-left: 10px;
 }
 
-.team-social-link:hover,
-.team-social-link:focus {
+.socials-list__link:hover,
+.socials-list__link:focus {
   background: var(--background-accent);
   color: var(--mainbackground);
 }
 
 /* regular customers */
-.regular-customers .customer-item {
+.regular-customers {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.regular-customers .regular-customers__item {
   width: 170px;
   height: 92px;
 }
 
-.customer-links {
+.regular-customers__links {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -412,16 +455,16 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.customer-icon {
+.regular-customers__icon {
   fill: currentColor;
 }
 
-.customer-item + .customer-item {
+.regular-customers__item:not(:first-child) {
   margin-left: 30px;
 }
 
-.customer-links:hover,
-.customer-links:focus {
+.regular-customers__links:hover,
+.regular-customers__links:focus {
   color: var(--background-accent);
   border: 1px solid var(--background-accent);
 }
@@ -588,7 +631,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-btn {
+.modal__close-btn {
   position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -608,8 +651,8 @@ img {
   background-color: var(--mainbackground);
 }
 
-.modal-close-btn:hover,
-.modal-close-btn:focus {
+.modal__close-btn:hover,
+.modal__close-btn:focus {
   fill: var(--background-accent);
 }
 
@@ -817,15 +860,15 @@ img {
   margin-left: 70px;
 }
 
-.socials-footer .team-social-link {
+.socials-footer .socials-list__link {
   background: rgba(255, 255, 255, 0.1);
   color: var(--mainbackground);
   -webkit-transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.socials-footer .team-social-link:hover,
-.socials-footer .team-social-link:focus {
+.socials-footer .socials-list__link:hover,
+.socials-footer .socials-list__link:focus {
   background: var(--background-accent);
 }
 
@@ -835,23 +878,17 @@ img {
           align-items: baseline;
 }
 
-.sign-form {
+.form-container {
   margin-left: 93px;
 }
 
-.sign-btn {
+.sign-form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-left: 12px;
-  padding-left: 29px;
-  padding-right: 28px;
 }
 
-.sign-email {
+.sign-form__email {
   background-color: var(--second-background-color);
   width: 358px;
   height: 50px;
@@ -863,13 +900,16 @@ img {
   color: var(--third-background-color);
 }
 
-.sign-center {
+.sign-form__btn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-left: 12px;
+  padding-left: 29px;
+  padding-right: 28px;
 }
 
 .sign-svg {
