--- a/sass/components/_advantages-section.scss
+++ b/sass/components/_advantages-section.scss
@@ -1,21 +1,19 @@
 /* advantages */
-
-.advantages-text {
-  font-size: var(--main-font-size);
-  line-height: 1.71;
-  color: var(--text-secondary-color);
+.advantages {
+  display: flex;
+  @extend .list;
 }
-.advantages .item {
+.advantages__item {
   width: 270px;
 }
-.advantages .item + .item {
+.advantages__item:not(:first-child) {
   margin-left: 30px;
 }
-.advantages-icon {
+.advantages__icon {
   background-repeat: no-repeat;
   background-size: cover;
 }
-.advantages-icon-bg {
+.advantages__icon-bg {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -23,4 +21,15 @@
   height: 120px;
   margin-bottom: 30px;
   background-color: var(--third-background-color);
+}
+.advantages__heading {
+  margin-bottom: 10px;
+  font-size: var(--main-font-size);
+  line-height: 1.1;
+  text-transform: uppercase;
+}
+.advantages__text {
+  font-size: var(--main-font-size);
+  line-height: 1.71;
+  color: var(--text-secondary-color);
 }
