--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -18,7 +18,7 @@
   padding-top: 200px;
   padding-bottom: 200px;
 }
-.hero-heading {
+.hero-section__heading {
   max-width: 696px;
   margin-left: auto;
   margin-right: auto;
