--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -26,7 +26,7 @@
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close-btn {
+.modal__close-btn {
   position: absolute;
   display: flex;
   align-items: center;
@@ -39,12 +39,20 @@
   border-radius: 50%;
   background-color: var(--mainbackground);
 }
-.modal-close-btn:hover,
-.modal-close-btn:focus {
+.modal__close-btn:hover,
+.modal__close-btn:focus {
   fill: var(--background-accent);
 }
 
 .is-hidden {
   pointer-events: none;
   opacity: 0;
+}
+.modal-header {
+  margin-bottom: 30px;
+  font-family: "Roboto";
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
 }
