--- a/sass/components/_regular-customers-section.scss
+++ b/sass/components/_regular-customers-section.scss
@@ -1,9 +1,13 @@
 /* regular customers */
-.regular-customers .customer-item {
+.regular-customers {
+  display: flex;
+  @extend .list;
+}
+.regular-customers .regular-customers__item {
   width: 170px;
   height: 92px;
 }
-.customer-links {
+.regular-customers__links {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15,14 +19,14 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.customer-icon {
+.regular-customers__icon {
   fill: currentColor;
 }
-.customer-item + .customer-item {
+.regular-customers__item:not(:first-child) {
   margin-left: 30px;
 }
-.customer-links:hover,
-.customer-links:focus {
+.regular-customers__links:hover,
+.regular-customers__links:focus {
   color: var(--background-accent);
   border: 1px solid var(--background-accent);
 }
