--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -2,27 +2,33 @@
 .team-section {
   background: var(--third-background-color);
 }
-.team-heading {
+.team-list {
+  display: flex;
+  @extend .list;
+}
+
+.team-member-card {
+  width: 270px;
+}
+.team-member-card:not(:first-child) {
+  margin-left: 30px;
+}
+.team-list__member-name {
   margin-bottom: 10px;
   font-weight: 500;
   font-size: var(--secondary-font-size);
   line-height: 1.172;
   text-align: center;
 }
-.team-text {
+.team-member-card__occupation {
   margin-bottom: 16px;
   font-size: var(--secondary-font-size);
   line-height: 1.172;
   text-align: center;
   color: var(--text-secondary-color);
 }
-.team-list .item {
-  width: 270px;
-}
-.team-list .item + .item {
-  margin-left: 30px;
-}
-.card-text {
+
+.team-member-card__text {
   padding-top: 30px;
   padding-bottom: 30px;
   border-radius: 0px 0px 4px 4px;
