--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -48,7 +48,7 @@
   pointer-events: none;
   opacity: 0;
 }
-.modal-header {
+.modal__header {
   margin-bottom: 30px;
   font-family: "Roboto";
   font-weight: 700;
