--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ img {
   text-decoration: none;
 }
 
-.list, .main-navigation, .contacts-navigation, .advantages, .works, .team-list, .socials-list, .regular-customers {
+.list, .main-navigation, .contacts-navigation, .advantages, .works, .team-list, .socials-list, .regular-customers, .footer-contacts {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -661,7 +661,7 @@ img {
   opacity: 0;
 }
 
-.modal-header {
+.modal__header {
   margin-bottom: 30px;
   font-family: "Roboto";
   font-weight: 700;
@@ -670,6 +670,7 @@ img {
   text-align: center;
 }
 
+/* modal */
 .label-container {
   position: relative;
 }
@@ -678,7 +679,7 @@ img {
   margin-top: 28px;
 }
 
-.modal-label {
+.modal__label {
   position: absolute;
   top: -18px;
   font-family: "Roboto";
@@ -688,7 +689,7 @@ img {
   color: #757575;
 }
 
-.modal-input {
+.modal__input {
   width: 448px;
   height: 40px;
   padding-left: 42px;
@@ -700,7 +701,7 @@ img {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.area-comments {
+.modal__area-comments {
   width: 448px;
   height: 120px;
   padding: 12px 16px 12px 16px;
@@ -713,14 +714,14 @@ img {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.area-comments:focus,
-.area-comments:hover {
+.modal__area-comments:focus,
+.modal__area-comments:hover {
   cursor: pointer;
   outline: none;
   border: 1px solid var(--background-accent);
 }
 
-.form-svg {
+.modal__svg {
   position: absolute;
   top: 50%;
   left: 12px;
@@ -728,15 +729,15 @@ img {
           transform: translateY(-50%);
 }
 
-.modal-input:focus,
-.modal-input:hover {
+.modal__input:focus,
+.modal__input:hover {
   cursor: pointer;
   outline: none;
   border: 1px solid var(--background-accent);
 }
 
-.modal-input:focus ~ .form-svg,
-.modal-input:hover ~ .form-svg {
+.modal__input:focus ~ .modal__svg,
+.modal__input:hover ~ .modal__svg {
   cursor: pointer;
   fill: var(--background-accent);
 }
@@ -768,7 +769,7 @@ img {
   color: var(--background-accent);
 }
 
-.modal-check {
+.modal__check {
   /* -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none; */
@@ -790,7 +791,7 @@ img {
   pointer-events: none;
 }
 
-.modal-check:checked + .checkbox-svg {
+.modal__check:checked + .checkbox-svg {
   background-image: url("../images/icon-check.svg");
   background-origin: border-box;
   background-size: contain;
@@ -808,14 +809,6 @@ img {
 }
 
 /* footer */
-.footer-links {
-  padding: 0;
-  margin: 0;
-  line-height: 1.71;
-  color: #ffffff99;
-  font-style: normal;
-}
-
 .footer-nav {
   margin-left: auto;
   margin-right: auto;
@@ -824,15 +817,15 @@ img {
   background: var(--second-background-color);
 }
 
-.footer-margin {
+.footer-nav__margin {
   margin-bottom: 20px;
 }
 
-.footer-logo {
+.footer-nav__logo {
   color: var(--mainbackground);
 }
 
-.footer-text {
+.footer-nav__adress {
   font-size: var(--main-font-size);
   line-height: 1.71;
   color: var(--mainbackground);
@@ -843,8 +836,42 @@ img {
   margin-top: 9px;
 }
 
-.footer-contacts .item + .item {
+.footer-contacts__item:not(:first-child) {
   margin-top: 9px;
+}
+
+.footer-nav__links {
+  padding: 0;
+  margin: 0;
+  line-height: 1.71;
+  color: #ffffff99;
+  font-style: normal;
+}
+
+.footer-socials {
+  margin-left: 70px;
+}
+
+.footer-socials .socials-list__link {
+  background: rgba(255, 255, 255, 0.1);
+  color: var(--mainbackground);
+  -webkit-transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-socials .socials-list__link:hover,
+.footer-socials .socials-list__link:focus {
+  background: var(--background-accent);
+}
+
+.footer-nav__baseline {
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+
+.form-container {
+  margin-left: 93px;
 }
 
 .join-us {
@@ -854,32 +881,6 @@ img {
   text-transform: uppercase;
   font-weight: 700;
   line-height: 1.172;
-}
-
-.socials-footer {
-  margin-left: 70px;
-}
-
-.socials-footer .socials-list__link {
-  background: rgba(255, 255, 255, 0.1);
-  color: var(--mainbackground);
-  -webkit-transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.socials-footer .socials-list__link:hover,
-.socials-footer .socials-list__link:focus {
-  background: var(--background-accent);
-}
-
-.footer-baseline {
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-}
-
-.form-container {
-  margin-left: 93px;
 }
 
 .sign-form {
@@ -912,7 +913,7 @@ img {
   padding-right: 28px;
 }
 
-.sign-svg {
+.sign-form__svg {
   margin-left: 10px;
 }
 /*# sourceMappingURL=main.css.map */
