--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -1,12 +1,4 @@
 /* footer */
-.footer-links {
-  padding: 0;
-  margin: 0;
-  line-height: 1.71;
-  color: #ffffff99;
-  font-style: normal;
-}
-
 .footer-nav {
   margin-left: auto;
   margin-right: auto;
@@ -14,23 +6,51 @@
   padding-bottom: 60px;
   background: var(--second-background-color);
 }
-.footer-margin {
+.footer-nav__margin {
   margin-bottom: 20px;
 }
-.footer-logo {
+.footer-nav__logo {
   color: var(--mainbackground);
 }
-.footer-text {
+.footer-nav__adress {
   font-size: var(--main-font-size);
   line-height: 1.71;
   color: var(--mainbackground);
   font-style: normal;
 }
 .footer-contacts {
+  @extend .list;
   margin-top: 9px;
 }
-.footer-contacts .item + .item {
+.footer-contacts__item:not(:first-child) {
   margin-top: 9px;
+}
+.footer-nav__links {
+  padding: 0;
+  margin: 0;
+  line-height: 1.71;
+  color: #ffffff99;
+  font-style: normal;
+}
+
+.footer-socials {
+  margin-left: 70px;
+}
+.footer-socials .socials-list__link {
+  background: rgba(255, 255, 255, 0.1);
+  color: var(--mainbackground);
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-socials .socials-list__link:hover,
+.footer-socials .socials-list__link:focus {
+  background: var(--background-accent);
+}
+.footer-nav__baseline {
+  align-items: baseline;
+}
+
+.form-container {
+  margin-left: 93px;
 }
 .join-us {
   margin-bottom: 20px;
@@ -39,25 +59,6 @@
   text-transform: uppercase;
   font-weight: 700;
   line-height: 1.172;
-}
-.socials-footer {
-  margin-left: 70px;
-}
-.socials-footer .socials-list__link {
-  background: rgba(255, 255, 255, 0.1);
-  color: var(--mainbackground);
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.socials-footer .socials-list__link:hover,
-.socials-footer .socials-list__link:focus {
-  background: var(--background-accent);
-}
-.footer-baseline {
-  align-items: baseline;
-}
-
-.form-container {
-  margin-left: 93px;
 }
 .sign-form {
   display: flex;
@@ -80,6 +81,6 @@
   padding-right: 28px;
 }
 
-.sign-svg {
+.sign-form__svg {
   margin-left: 10px;
 }
