--- a/sass/components/_filter-btns.scss
+++ b/sass/components/_filter-btns.scss
@@ -1,13 +1,15 @@
 /* portfolio */
 /* filter buttons */
-.filter-btns {
+.filter-list {
+  @extend .list;
+  display: flex;
   justify-content: center;
   margin-bottom: 50px;
 }
-.filter-btns .item + .item {
+.filter-list__item:not(:first-child) {
   margin-left: 8px;
 }
-.btn {
+.filter-list__btn {
   border: 0;
   border-radius: 4px;
   padding: 6px 22px;
@@ -21,8 +23,8 @@
     background 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.btn:hover,
-.btn:focus {
+.filter-list__btn:hover,
+.filter-list__btn:focus {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   background: var(--text-accent-color);
