--- a/sass/components/_portfolio-works-section.scss
+++ b/sass/components/_portfolio-works-section.scss
@@ -1,30 +1,33 @@
 /* works */
+.works {
+  @extend .list;
+  display: flex;
+  flex-wrap: wrap;
+}
 
-.works-heading {
+.portfolio-card__heading {
   margin-bottom: 4px;
   font-size: 18px;
   line-height: 2;
   color: var(--text-primary-color);
 }
-.works-filter {
+.portfolio-card__filter {
   font-size: var(--secondary-font-size);
   line-height: 1.87;
   color: var(--text-secondary-color);
 }
-.works {
-  flex-wrap: wrap;
-}
-.works .item {
+
+.portfolio-card {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.works-thumb {
+.portfolio-card__thumb {
   position: relative;
   overflow: hidden;
 }
-.works-overlay {
+.portfolio-card__overlay {
   position: absolute;
   background: rgba(33, 150, 243, 0.9);
   width: 100%;
@@ -39,24 +42,24 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transform: translateY(0);
 }
-.works-item {
+.portfolio-card__link {
   display: block;
 }
-.works-item:hover .works-overlay {
+.portfolio-card__link:hover .portfolio-card__overlay {
   transform: translateY(-100%);
 }
-.works-item:hover,
-.works-item:focus {
+.portfolio-card__link:hover,
+.portfolio-card__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.works .item:nth-child(3n) {
+.portfolio-card:nth-child(3n) {
   margin-right: 0;
 }
-.works .item:nth-last-child(-n + 3) {
+.portfolio-card:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
-.works-card {
+.portfolio-card__text-container {
   padding: 20px 24px;
   border-bottom: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
