--- a/css/main.css
+++ b/css/main.css
@@ -104,8 +104,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-link:hover,
-.nav-link:focus {
+.nav-link:hover, .nav-link:focus {
   color: var(--text-accent-color);
 }
 
@@ -239,8 +238,7 @@ img {
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.main-btn:focus,
-.main-btn:hover {
+.main-btn:focus, .main-btn:hover {
   background: var(--background-accent);
 }
 
@@ -391,6 +389,10 @@ img {
           justify-content: center;
 }
 
+.socials-list__item:not(:first-child) {
+  margin-left: 10px;
+}
+
 .socials-list__link {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -409,18 +411,13 @@ img {
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.socials-list__icon {
-  fill: currentColor;
-}
-
-.socials-list__item:not(:first-child) {
-  margin-left: 10px;
-}
-
-.socials-list__link:hover,
-.socials-list__link:focus {
+.socials-list__link:hover, .socials-list__link:focus {
   background: var(--background-accent);
   color: var(--mainbackground);
+}
+
+.socials-list__icon {
+  fill: currentColor;
 }
 
 /* regular customers */
