--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -17,17 +17,17 @@
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
-}
-.hero-section__heading {
-  max-width: 696px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 30px;
-  text-align: center;
-  font-size: 44px;
-  font-weight: 900;
-  line-height: 1.364;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: var(--mainbackground);
+  &__heading {
+    max-width: 696px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+    text-align: center;
+    font-size: 44px;
+    font-weight: 900;
+    line-height: 1.364;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: var(--mainbackground);
+  }
 }
