--- a/sass/components/_main-btn.scss
+++ b/sass/components/_main-btn.scss
@@ -12,9 +12,8 @@
   color: var(--mainbackground);
 
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.main-btn:focus,
-.main-btn:hover {
-  background: var(--background-accent);
+  &:focus,
+  &:hover {
+    background: var(--background-accent);
+  }
 }
