--- a/sass/components/_nav-link.scss
+++ b/sass/components/_nav-link.scss
@@ -9,9 +9,8 @@
   text-decoration: none;
   color: var(--text-primary-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--text-accent-color);
+  &:hover,
+  &:focus {
+    color: var(--text-accent-color);
+  }
 }
