--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -3,6 +3,9 @@
   align-items: center;
   justify-content: center;
   @extend .list;
+  &__item:not(:first-child) {
+    margin-left: 10px;
+  }
 }
 .socials-list__link {
   display: flex;
@@ -14,16 +17,12 @@
   color: var(--background-icon);
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background: var(--background-accent);
+    color: var(--mainbackground);
+  }
 }
 .socials-list__icon {
   fill: currentColor;
-}
-
-.socials-list__item:not(:first-child) {
-  margin-left: 10px;
-}
-.socials-list__link:hover,
-.socials-list__link:focus {
-  background: var(--background-accent);
-  color: var(--mainbackground);
 }
