--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -9,10 +9,11 @@
 
 .team-member-card {
   width: 270px;
+  &:not(:first-child) {
+    margin-left: 30px;
+  }
 }
-.team-member-card:not(:first-child) {
-  margin-left: 30px;
-}
+
 .team-list__member-name {
   margin-bottom: 10px;
   font-weight: 500;
