--- a/sass/components/_wtdo-section.scss
+++ b/sass/components/_wtdo-section.scss
@@ -5,10 +5,11 @@
 }
 .works__card {
   position: relative;
+  &:not(:first-child) {
+    margin-left: 30px;
+  }
 }
-.works__card:not(:first-child) {
-  margin-left: 30px;
-}
+
 .works__overlay {
   display: flex;
   justify-content: center;
