--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -8,10 +8,11 @@
   background: rgba(0, 0, 0, 0.2);
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0.8);
+  }
 }
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.8);
-}
+
 .modal {
   position: absolute;
   top: 50%;
@@ -38,12 +39,11 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   background-color: var(--mainbackground);
+  &:hover,
+  &:focus {
+    fill: var(--background-accent);
+  }
 }
-.modal__close-btn:hover,
-.modal__close-btn:focus {
-  fill: var(--background-accent);
-}
-
 .is-hidden {
   pointer-events: none;
   opacity: 0;
