--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -21,10 +21,11 @@
 .footer-contacts {
   @extend .list;
   margin-top: 9px;
+  &__item:not(:first-child) {
+    margin-top: 9px;
+  }
 }
-.footer-contacts__item:not(:first-child) {
-  margin-top: 9px;
-}
+
 .footer-nav__links {
   padding: 0;
   margin: 0;
@@ -35,15 +36,15 @@
 
 .footer-socials {
   margin-left: 70px;
-}
-.footer-socials .socials-list__link {
-  background: rgba(255, 255, 255, 0.1);
-  color: var(--mainbackground);
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-socials .socials-list__link:hover,
-.footer-socials .socials-list__link:focus {
-  background: var(--background-accent);
+  .socials-list__link {
+    background: rgba(255, 255, 255, 0.1);
+    color: var(--mainbackground);
+    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .socials-list__link:hover,
+  .socials-list__link:focus {
+    background: var(--background-accent);
+  }
 }
 .footer-nav__baseline {
   align-items: baseline;
