--- a/sass/components/_regular-customers-section.scss
+++ b/sass/components/_regular-customers-section.scss
@@ -2,10 +2,17 @@
 .regular-customers {
   display: flex;
   @extend .list;
+  .regular-customers__item {
+    width: 170px;
+    height: 92px;
+  }
 }
-.regular-customers .regular-customers__item {
+.regular-customers__item {
   width: 170px;
   height: 92px;
+  &:not(:first-child) {
+    margin-left: 30px;
+  }
 }
 .regular-customers__links {
   display: flex;
@@ -18,15 +25,13 @@
   border-radius: 4px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--background-accent);
+    border: 1px solid var(--background-accent);
+  }
 }
 .regular-customers__icon {
   fill: currentColor;
-}
-.regular-customers__item:not(:first-child) {
-  margin-left: 30px;
-}
-.regular-customers__links:hover,
-.regular-customers__links:focus {
-  color: var(--background-accent);
-  border: 1px solid var(--background-accent);
 }
