font-family vars

--- a/sass/components/_feedback-form.scss
+++ b/sass/components/_feedback-form.scss
@@ -10,7 +10,7 @@
 .modal__label {
   position: absolute;
   top: -18px;
-  font-family: "Roboto";
+  font-family: var(--main-font-family);
 
   font-size: 12px;
   line-height: 1.1666;
@@ -69,7 +69,7 @@
 }
 .license-text {
   margin-left: 15px;
-  font-family: "Roboto";
+  font-family: var(--main-font-family);
   font-size: 14px;
   line-height: 1.71;
   color: var(--text-secondary-color);
