--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -50,7 +50,7 @@
 }
 .modal__header {
   margin-bottom: 30px;
-  font-family: "Roboto";
+  font-family: var(--main-font-family);
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
