--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,4 +1,6 @@
 :root {
+  --main-font-family: "Roboto", sans-serif;
+  --secondary-font-family: "Raleway", sans-serif;
   --main-font-size: 14px;
   --secondary-font-size: 16px;
   --text-primary-color: #212121;
