--- a/sass/components/_filter-btns.scss
+++ b/sass/components/_filter-btns.scss
@@ -14,7 +14,7 @@
   border: 0;
   border-radius: 4px;
   padding: 6px 22px;
-  font-family: "Roboto", sans-serif;
+  font-family: var(--main-font-family);
   font-weight: 500;
   font-size: var(--secondary-font-size);
   line-height: 1.62;
