--- a/sass/components/_main-btn.scss
+++ b/sass/components/_main-btn.scss
@@ -2,7 +2,7 @@
   border: 0;
   border-radius: 4px;
   padding: 10px 32px;
-  font-family: "Roboto", sans-serif;
+  font-family: var(--main-font-family);
   font-weight: 700;
   font-size: var(--secondary-font-size);
   line-height: 1.875;
