--- a/sass/components/_portfolio-works-section.scss
+++ b/sass/components/_portfolio-works-section.scss
@@ -47,7 +47,7 @@
   width: 100%;
   height: 294px;
   padding: 63px 24px;
-  font-family: "Roboto";
+  font-family: var(--main-font-family);
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
