--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "utils/variables";
 @import "utils/utility";
+@import "base/base";
 @import "components/nav-link";
 @import "components/page-header";
 @import "components/logo";
