--- a/sass/utils/_utility.scss
+++ b/sass/utils/_utility.scss
@@ -2,7 +2,7 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: var(--main-font-family);
   letter-spacing: 0.03em;
   color: var(--text-primary-color);
 }
